--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,26 +1,21 @@
-{% include base_path %}
-
-<meta charset="utf-8">
-
 <head>
+  <meta charset="utf-8">
   {% include seo.html %}
-  <title>{{ page.title | default: site.title }}</title> <!-- Add this line -->
+  <title>{{ page.title | default: site.title }}</title> <!-- This line is correctly added -->
   {% include head/custom.html %}
+  <link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
+  
+  <!-- http://t.co/dKP3o1e -->
+  <meta name="HandheldFriendly" content="True">
+  <meta name="MobileOptimized" content="320">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <script>
+    document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
+  </script>
+
+  <!-- For all browsers -->
+  <link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
+
+  <meta http-equiv="cleartype" content="on">
 </head>
-
-
-<link href="{% if site.atom_feed.path %}{{ site.atom_feed.path }}{% else %}{{ base_path }}/feed.xml{% endif %}" type="application/atom+xml" rel="alternate" title="{{ site.title }} Feed">
-
-<!-- http://t.co/dKP3o1e -->
-<meta name="HandheldFriendly" content="True">
-<meta name="MobileOptimized" content="320">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-<script>
-  document.documentElement.className = document.documentElement.className.replace(/\bno-js\b/g, '') + ' js ';
-</script>
-
-<!-- For all browsers -->
-<link rel="stylesheet" href="{{ base_path }}/assets/css/main.css">
-
-<meta http-equiv="cleartype" content="on">
