--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,9 @@
      Your Street Address<br>
      City, State, Zip Code<br>
      Country</p>
-  
-  <!-- Add Google Map -->
-  <iframe src="YOUR_GOOGLE_MAP_EMBED_CODE" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+</div>
+
+<!-- Add Google Map aligned to the right -->
+<div style="text-align: right;">
+  <iframe src="YOUR_GOOGLE_MAP_EMBED_CODE" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
