--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,5 +29,5 @@
 
 <!-- Add Google Map aligned to the right -->
 <div style="text-align: right;">
-  <iframe src="YOUR_GOOGLE_MAP_EMBED_CODE" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  <iframe src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.6300797410327!2d88.52192737578463!3d22.963846818516256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8bf0ebd68bc8b%3A0x92d423474389ff5c!2sIndian%20Institute%20of%20Science%20Education%20and%20Research%20Kolkata%20(IISER%20Kolkata)!5e0!3m2!1sen!2sin!4v1729282468851!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 </div>
