--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -51,9 +51,10 @@
   
   .social-icons li {
     display: inline-block;
-    margin-right: 5px; /* Reduced space between social icons */
+    margin-right: 10px;
   }
 </style>
+
 
 
 
