--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,12 +20,12 @@
 
     <!-- Mailing Address and Email -->
     <p><strong>Mailing Address:</strong><br>
-      Your Name<br>
-      Your Street Address<br>
-      City, State, Zip Code<br>
-      Country</p>
+      Department of Chemical Sciences<br>
+      Indian Institute of Science Education and Research (IISER) Kolkata<br>
+      Mohanpur, Nadia, West Bengal, 741 246<br>
+      India</p>
       
-    <p><strong>Contact me:</strong> <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+    <p><strong>Contact me:</strong> <a href="mailto:aroy.astro@gmail.com">aroy.astro@gmail.com, </a><a href="mailto:aroy.astro@gmail.com">aroy.astro@gmail.com</a></p>
 
     <!-- Copyright Info -->
     <p>&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }},
