--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,7 +25,7 @@
       Mohanpur, Nadia, West Bengal, 741 246<br>
       India</p>
       
-    <p><strong>Contact me:</strong> <a href="mailto:aroy.astro@gmail.com">aroy.astro@gmail.com, </a><a href="mailto:aroy.astro@gmail.com">aroy.astro@gmail.com</a></p>
+    <p><strong>Contact me:</strong> <a href="mailto:aroy.astro@gmail.com">aroy.astro@gmail.com, </a><a href="mailto:ar20ms146@iiserkol.ac.in">ar20ms146@iiserkol.ac.in</a></p>
 
     <!-- Copyright Info -->
     <p>&copy; {{ site.time | date: '%Y' }} {{ site.name | default: site.title }},
