--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,10 +38,18 @@
   </div>
 
   <!-- Right Section: Google Map -->
-  <div style="width: 35%; text-align: right;">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.6300797410327!2d88.52192737578463!3d22.963846818516256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8bf0ebd68bc8b%3A0x92d423474389ff5c!2sIndian%20Institute%20of%20Science%20Education%20and%20Research%20Kolkata%20(IISER%20Kolkata)!5e0!3m2!1sen!2sin!4v1729282468851!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-  </div>
+<div style="width: 100%; text-align: right;">
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.6300797410327!2d88.52192737578463!3d22.963846818516256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8bf0ebd68bc8b%3A0x92d423474389ff5c!2sIndian%20Institute%20of%20Science%20Education%20and%20Research%20Kolkata%20(IISER%20Kolkata)!5e0!3m2!1sen!2sin!4v1729282468851!5m2!1sen!2sin" 
+        width="100%" 
+        height="250" 
+        style="border:0; max-width: 400px; margin: auto;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
 </div>
+
 
 <style>
   .social-icons {
