--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,19 +38,18 @@
   </div>
 
   <!-- Right Section: Google Map -->
-  <div style="width: 100%; text-align: right; display: flex; justify-content: flex-end;">
-      <iframe 
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.6300797410327!2d88.52192737578463!3d22.963846818516256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8bf0ebd68bc8b%3A0x92d423474389ff5c!2sIndian%20Institute%20of%20Science%20Education%20and%20Research%20Kolkata%20(IISER%20Kolkata)!5e0!3m2!1sen!2sin!4v1729282468851!5m2!1sen!2sin" 
-          width="100%" 
-          height="250" 
-          style="border:0; max-width: 400px; margin: auto;" 
-          allowfullscreen="" 
-          loading="lazy" 
-          referrerpolicy="no-referrer-when-downgrade">
-      </iframe>
-  </div>
-
+<div style="width: 100%; text-align: right;">
+    <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.6300797410327!2d88.52192737578463!3d22.963846818516256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8bf0ebd68bc8b%3A0x92d423474389ff5c!2sIndian%20Institute%20of%20Science%20Education%20and%20Research%20Kolkata%20(IISER%20Kolkata)!5e0!3m2!1sen!2sin!4v1729282468851!5m2!1sen!2sin" 
+        width="100%" 
+        height="250" 
+        style="border:0; max-width: 400px; margin: auto;" 
+        allowfullscreen="" 
+        loading="lazy" 
+        referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
 </div>
+
 
 <style>
   .social-icons {
@@ -62,45 +61,7 @@
     display: inline-block;
     margin-right: 10px;
   }
-
-  /* Responsive design for mobile devices */
-  @media (max-width: 768px) {
-    .social-icons li {
-      margin-right: 5px; /* Reduce space between icons */
-    }
-
-    .social-icons {
-      text-align: center;
-      margin-bottom: 15px; /* Add space between social icons and contact info */
-    }
-
-    .page__footer-follow {
-      margin-bottom: 15px;
-    }
-
-    div {
-      width: 100%; /* Make the sections take up full width on small screens */
-      margin: 0 auto;
-    }
-
-    iframe {
-      max-width: 100%; /* Ensure the map fits within mobile screens */
-    }
-
-    p {
-      font-size: 13px; /* Adjust font size for readability on smaller screens */
-    }
-
-    /* Move the Google Map below contact info on mobile */
-    .page__footer-follow + div {
-      order: 1; /* Moves the Google map below the other sections */
-      margin-top: 20px; /* Space between contact info and map */
-      text-align: center;
-    }
-  }
 </style>
-
-
 
 
 
