--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: space-between; align-items: flex-start; flex-wrap: wrap;">
+<div style="display: flex; justify-content: space-between; align-items: flex-start;">
 
   <!-- Left Section: Sitemap and Contact Info -->
   <div style="width: 60%; font-size: 14px; line-height: 1.4;">
@@ -38,7 +38,7 @@
   </div>
 
   <!-- Right Section: Google Map -->
-  <div style="width: 100%; text-align: right; margin-top: 20px;">
+<div style="width: 100%; text-align: right;">
     <iframe 
         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3673.6300797410327!2d88.52192737578463!3d22.963846818516256!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f8bf0ebd68bc8b%3A0x92d423474389ff5c!2sIndian%20Institute%20of%20Science%20Education%20and%20Research%20Kolkata%20(IISER%20Kolkata)!5e0!3m2!1sen!2sin!4v1729282468851!5m2!1sen!2sin" 
         width="100%" 
@@ -48,9 +48,8 @@
         loading="lazy" 
         referrerpolicy="no-referrer-when-downgrade">
     </iframe>
-  </div>
-
 </div>
+
 
 <style>
   .social-icons {
@@ -61,31 +60,6 @@
   .social-icons li {
     display: inline-block;
     margin-right: 10px;
-  }
-
-  /* Responsive adjustments */
-  @media (max-width: 768px) {
-    .page__footer-follow {
-      text-align: center;
-    }
-
-    /* Adjusting layout for small screens */
-    div {
-      width: 100%;
-    }
-
-    /* Move map below address and justify text for better mobile view */
-    .page__footer-follow,
-    .social-icons,
-    p {
-      text-align: justify;
-    }
-
-    /* Ensure map doesn't stretch too wide */
-    iframe {
-      max-width: 100%;
-      margin-top: 20px;
-    }
   }
 </style>
 
